--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 /* Fonts from Google Fonts - more at https://fonts.google.com */
 
 body {
-  background-color: #3399FF;
+  background-color: #2E5C71;
   font-family: "Open Sans", sans-serif;
   padding: 5px 25px;
   font-size: 18px;
